7902038: JDK 9 compatibility fixes for Serviceability and Dynamic Attach